Align text, image putting fixed, template fixing, long route fixing etc.

--- a/public/css/color.css
+++ b/public/css/color.css
@@ -14,8 +14,8 @@
 /* Dark theme */
 @media (prefers-color-scheme: dark) {
     :root {
-        --primary: #ef4839;
-        --secondary: hsl(5, 98%, 68%);
+        --primary: hsl(5, 85%, 55%);
+        --secondary: hsl(5, 100%, 64%);
         --accent: hsl(200, 100%, 68%);
         --primary-background: hsl(0, 0%, 15%);
         --navbar-background: hsl(0, 0%, 10%);
@@ -37,6 +37,13 @@ body{
     max-width: 100vw;
 }
 
+.text{
+    overflow: auto; /* Adds scrollbars if needed */
+  white-space: normal; /* Wraps text normally */
+  word-wrap: break-word; /* Breaks long words */
+  box-sizing: border-box; /* Includes padding in width calculation */
+}
+
 section{
     margin: 0 auto;
     width: calc(fit-content - 2em);
@@ -46,7 +53,7 @@ section{
         margin: 0;
         margin-bottom: 0.4em;
     }
-    h1,h3,h4, p, a{
+    h1,h3,h4, p, a, .text{
         margin: 0;
         padding: 0.2em 0;
     }
@@ -72,7 +79,7 @@ section{
         background-color: var(--muted);
     }
 }
-h1 ,h2 ,h3 ,h4 , p , a , blockquote , i , b, main li, main ul, ol {
+h1 ,h2 ,h3 ,h4 , p , a , blockquote , i , b, main li, main ul, ol, .text {
     max-width: 75ch;
     text-wrap: balance;
 }
@@ -116,7 +123,7 @@ h4 {
 
 /* Links */
 main a {
-    color: hsl(from var(--primary) h 75% l); /* Full color */
+    color: hsl(from var(--primary) h 70% l); /* Full color */
     text-decoration: underline!important;
     text-decoration-color: hsl(from var(--primary) h s l / 40%)!important;
     text-decoration-thickness: 2px!important;
@@ -134,6 +141,9 @@ a:has(img){
 main img{
     border-radius: 10px;
     width: 50ch;
+    min-width: 30ch;
+    min-height: 20ch;
+    background-color: white;
     &.big{
         height: 100%;
         width: 40%;
@@ -145,7 +155,7 @@ main img{
 }
 
 /* Paragraphs */
-p {
+p, .text {
     color: var(--text); /* Base text color */
     letter-spacing: 0.05em;
 }
@@ -164,6 +174,11 @@ li, ul{
         width: 100%;
     }
     blockquote, ul, img&{
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .text&{
+        min-width: 20ch;
         margin-left:auto;
         margin-right:auto;
     }
@@ -200,7 +215,7 @@ li, ul{
     blockquote{
         flex: 0 0 auto;
     }
-    div{
+    div:not(:has(img)){
         max-width: 75ch;
         flex: 1 1 200px;
     }
